--- a/ursmskit/src/main/res/layout/dialog_info_positive.xml
+++ b/ursmskit/src/main/res/layout/dialog_info_positive.xml
@@ -1,6 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/ur_sms_kit_background"
     android:orientation="vertical">
 
     <TextView
@@ -9,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:maxLines="1"
+        android:textColor="@color/ur_sms_kit_primary_text"
         android:ellipsize="end"
         android:paddingLeft="16dp"
         android:paddingTop="16dp"
@@ -19,6 +21,7 @@
         android:id="@+id/tvMessage"
         style="@style/TextAppearance.MaterialComponents.Subtitle1"
         android:layout_width="match_parent"
+        android:textColor="@color/ur_sms_kit_secondary_text"
         android:layout_height="wrap_content"
         android:padding="16dp" />
 
