--- a/ursmskit/src/main/res/layout/viewholder_country_more.xml
+++ b/ursmskit/src/main/res/layout/viewholder_country_more.xml
@@ -2,6 +2,8 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardBackgroundColor="@color/ur_sms_kit_background"
     android:layout_marginBottom="1dp">
     <!--app:cardCornerRadius="8dp"-->
 
@@ -25,6 +27,7 @@
             style="@style/TextAppearance.AppCompat.Medium"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@color/ur_sms_kit_primary_text"
             android:ellipsize="end"
             android:maxLines="1"
             android:padding="16dp"
